<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24px"
        android:title="@string/title_home"
        />
    <item
        android:id="@+id/navigation_dictionary"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/title_dictionary" />

    <item
        android:id="@+id/navigation_tests"
        android:icon="@drawable/ic_rule_24px"
        android:title="@string/title_tests" />

</menu>