...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/YouAreLearningLanguageTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/LearningLanguageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/language_learning_card_text"
            android:textColor="@color/primary"
...
